# jirasync

./: .gitignore  Cargo.toml  Gopkg.toml  README.md
cmd/jirasync/: github.go  jirasync.go  sort.go
src/: github.rs  main.rs
