[package]
name = "jirasync"
version = "0.1.0"
authors = ["David Brown <david.brown@linaro.org>"]

[dependencies]
env_logger = "0.4"
futures = "0.1"
goji = { version = "0.1", path = "goji" }
hyper = "0.11"
hyper-tls = "0.1"
netrc = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
